autorizhaion white space, click bug

--- a/css/main.css
+++ b/css/main.css
@@ -2558,7 +2558,6 @@ a[aria-label=Next] {
   display: flex; }
 
 .profile_fluid {
-  padding: 50px 0;
   min-height: 75vh; }
   .profile_fluid .profile_container {
     max-width: 1170px;
@@ -2826,6 +2825,13 @@ a[aria-label=Next] {
   display: none; }
   .time_editing_row.show {
     display: flex; }
+
+.authorization .auth_dropdown span {
+  white-space: nowrap; }
+
+.fb_reset {
+  position: absolute;
+  z-index: 7; }
 
 @media only screen and (min-width: 1100px) {
   .header_nav {
